@@ -146,11 +146,21 @@ AbortTask::FillReachable(const AircraftState &state,
     ++v;
   }
 
-  /* sort by arrival time */
-  std::sort(q.begin(), q.end(), [](const auto &x, const auto &y){
-    return x.solution.time_elapsed + x.solution.time_virtual <
-      y.solution.time_elapsed + y.solution.time_virtual;
-  });
+  /**
+   * If dealing with reachable points, sort by arrival altitude.
+   * Otherwise, sort by arrival time, which takes into account the wind
+   * drift while circling to gain the altitude needed to reach the point.
+   */
+  if (final_glide) {
+    std::sort(q.begin(), q.end(), [](const auto &x, const auto &y){
+      return x.solution.altitude_difference > y.solution.altitude_difference;
+    });
+  } else {
+    std::sort(q.begin(), q.end(), [](const auto &x, const auto &y){
+      return x.solution.time_elapsed + x.solution.time_virtual <
+        y.solution.time_elapsed + y.solution.time_virtual;
+    });
+  }
 
   const auto n = std::min(q.size(), max_abort - task_points.size());
   for (std::size_t j = 0; j < n; ++j) {
@@ -209,21 +219,44 @@ AbortTask::UpdateSample(const AircraftState &state,
     return false;
   }
 
-  // sort by arrival time
-
-  // first try with final glide only
+  /**
+   * First, get only reachable airfields (no outlanding sites), sort them by
+   * arrival altitude, and put them in task_points.
+   */
   reachable_landable |=  FillReachable(state, approx_waypoints, glide_polar,
                                        true, true, true);
+
+  /**
+   * Now add to task_points reachable outlanding sites, sorted by arrival
+   * altitude.
+   */
   reachable_landable |=  FillReachable(state, approx_waypoints, glide_polar,
                                        false, true, true);
 
-  // inform clients that the landable reachable scan has been performed 
+  /**
+   * Add to the "alternates" list the reachable airfield and outlanding site
+   * waypoints just added to task_points, sorted according to the "Alternates
+   * mode" setting.
+   */
   ClientUpdate(state, true);
 
-  // now try without final glide constraint and not preferring airports
+  /**
+   * Finally, add to task_points unreachable landable waypoints (both
+   * airfields and outlanding sites, with no preference for either),
+   * sorted by arrival time. This sort is done by arrival time instead of
+   * by arrival altitude, because for an unreachable point, climbing is
+   * required. Because any wind will cause drifting while climbing, the
+   * point requiring the least climbing is the one with the earliest
+   * arrival time, not necessarily the one with the greatest arrival
+   * altitude.
+   */
   FillReachable(state, approx_waypoints, glide_polar, false, false, false);
 
-  // inform clients that the landable unreachable scan has been performed 
+  /**
+   * Add to the "alternates" list the unreachable landable waypoints
+   * just added to task_points, sorted according to the "Alternates mode"
+   * setting.
+   */
   ClientUpdate(state, false);
 
   if (task_points.size()) {
